MetaData/src/org/cs3/pl/parser/internal/classic/PrologParser.java
/* Generated By:JJTree&JavaCC: Do not edit this line. PrologParser.java */
package org.cs3.pl.parser.internal.classic;
import java.util.ArrayList;
import java.util.List;

public class PrologParser/*@bgen(jjtree)*/implements PrologParserTreeConstants, PrologParserConstants {/*@bgen(jjtree)*/
  protected JJTPrologParserState jjtree = new JJTPrologParserState();void jjtreeOpenNodeScope(Node n)
    {
      ((SimpleNode)n).setFirstToken(getToken(1));
    }

    void jjtreeCloseNodeScope(Node n)
    {
      ((SimpleNode)n).setLastToken(getToken(0));
    }

    public ASTCompilationUnit getASTRoot(){
                return (ASTCompilationUnit) jjtree.rootNode();
        }

        private List errors = new ArrayList();

        public List getErrors() {
                return errors;
        }

        public void error_skipto(int kind) {
          ParseException e = generateParseException();  // generate the exception object.
          errors.add(e);
//	  System.out.println(e.toString());  // print the error message
          Token t;
          do {
            t = getNextToken();
          } while (t.kind != kind && t.kind != EOF);
//	  if(t.kind != EOF)
        //  	getNextToken();
            // The above loop consumes tokens all the way up to a token of
            // "kind".  We use a do-while loop rather than a while because the
            // current token is the one immediately before the erroneous token
            // (in our case the token immediately before what should have been
            // "if"/"while".
        }

    public static void main (String [] args) {
        PrologParser parser;
        String filename = null;
        long initTime = 0;
        long parseTime = 0;
        long startTime = 0;
        long stopTime = 0;
        if (args.length == 0)
        {
            System.out.println("Prolog Parser Version 0.1:  Reading from standard input . . .");
            parser = new PrologParser(System.in);
        } else if (args.length == 1)
        {
            filename = args[0];
            System.out.println("Prolog Parser Version 0.1:  Reading from file " + filename + " . . .");
            try
            {
                startTime = System.currentTimeMillis();
                parser = new PrologParser(new java.io.FileInputStream(filename));
                stopTime = System.currentTimeMillis();
                initTime = stopTime - startTime;
            } catch (java.io.FileNotFoundException e)
            {
                System.out.println("Prolog Parser Version 0.1:  File " + filename + " not found.");
                return;
            }
        } else
        {
            System.out.println("Prolog Parser Version 0.1:  Usage is one of:");
            System.out.println("         java PrologParser < inputfile");
            System.out.println("OR");
            System.out.println("         java PrologParser inputfile");
            return;
        }
        try
        {
            startTime = System.currentTimeMillis();
            parser.CompilationUnit();
            stopTime = System.currentTimeMillis();
            parseTime = stopTime - startTime;
            System.out.println("Prolog Parser Version 0.1: ");
            System.out.println("   Prolog program parsed " + filename + " successfully in " + (initTime + parseTime) + " ms.");
            System.out.println("      parser initialization time was " + initTime + " ms.");
            System.out.println("      parser parse time was " + parseTime + " ms.");
        } catch (ParseException e)
        {
            System.out.println(e.getMessage());
            System.out.println("Prolog Parser Version 0.1:  Encountered errors during parse.");
        }
    }

/*****************************************
 * THE JAVA LANGUAGE GRAMMAR STARTS HERE *
 *****************************************/

/*
 * Program structuring syntax follows.
 */
  final public void CompilationUnit() throws ParseException {
 /*@bgen(jjtree) CompilationUnit */
  ASTCompilationUnit jjtn000 = new ASTCompilationUnit(this, JJTCOMPILATIONUNIT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
  jjtreeOpenNodeScope(jjtn000);
    try {
      try {
        label_1:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case DYNAMIC:
          case MULTIFILE:
          case MODULE_TRANSPARENT:
          case VOLATILE:
          case QUERY:
          case CLAUSEDEF:
          case CHARACTER_ATOM:
          case IDENTIFIER:
          case LPAREN:
            ;
            break;
          default:
            jj_la1[0] = jj_gen;
            break label_1;
          }
          Member();
        }
        jj_consume_token(0);
      } catch (ParseException e) {
            error_skipto(DOT);
      }
    } catch (Throwable jjte000) {
     if (jjtc000) {
       jjtree.clearNodeScope(jjtn000);
       jjtc000 = false;
     } else {
       jjtree.popNode();
     }
     if (jjte000 instanceof RuntimeException) {
       {if (true) throw (RuntimeException)jjte000;}
     }
     if (jjte000 instanceof ParseException) {
       {if (true) throw (ParseException)jjte000;}
     }
     {if (true) throw (Error)jjte000;}
    } finally {
     if (jjtc000) {
       jjtree.closeNodeScope(jjtn000, true);
       jjtreeCloseNodeScope(jjtn000);
     }
    }
  }

  final public void Member() throws ParseException {
    try {
      if (jj_2_1(2)) {
        NamedCall();
      } else {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case QUERY:
        case CLAUSEDEF:
          Call();
          break;
        case DYNAMIC:
        case MULTIFILE:
        case MODULE_TRANSPARENT:
        case VOLATILE:
        case CHARACTER_ATOM:
        case IDENTIFIER:
        case LPAREN:
          Clause();
          break;
        default:
          jj_la1[1] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    } catch (ParseException e) {
            error_skipto(DOT);
    }
  }

  final public void Functor() throws ParseException {
 /*@bgen(jjtree) Functor */
     ASTFunctor jjtn000 = new ASTFunctor(this, JJTFUNCTOR);
     boolean jjtc000 = true;
     jjtree.openNodeScope(jjtn000);
     jjtreeOpenNodeScope(jjtn000);Token token;
    try {
      if (jj_2_2(2)) {
        token = jj_consume_token(IDENTIFIER);
       jjtn000.setModuleName(token.image.toString());
        jj_consume_token(COLON);
      } else {
        ;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case IDENTIFIER:
        token = jj_consume_token(IDENTIFIER);
      jjtree.closeNodeScope(jjtn000, true);
      jjtc000 = false;
      jjtreeCloseNodeScope(jjtn000);
     jjtn000.setName(token.image.toString());
        break;
      case DYNAMIC:
        token = jj_consume_token(DYNAMIC);
      jjtree.closeNodeScope(jjtn000, true);
      jjtc000 = false;
      jjtreeCloseNodeScope(jjtn000);
     jjtn000.setName(token.image.toString());
        break;
      case MULTIFILE:
        token = jj_consume_token(MULTIFILE);
      jjtree.closeNodeScope(jjtn000, true);
      jjtc000 = false;
      jjtreeCloseNodeScope(jjtn000);
     jjtn000.setName(token.image.toString());
        break;
      case MODULE_TRANSPARENT:
        token = jj_consume_token(MODULE_TRANSPARENT);
      jjtree.closeNodeScope(jjtn000, true);
      jjtc000 = false;
      jjtreeCloseNodeScope(jjtn000);
     jjtn000.setName(token.image.toString());
        break;
      case VOLATILE:
        token = jj_consume_token(VOLATILE);
      jjtree.closeNodeScope(jjtn000, true);
      jjtc000 = false;
      jjtreeCloseNodeScope(jjtn000);
     jjtn000.setName(token.image.toString());
        break;
      case POINTER:
        token = jj_consume_token(POINTER);
      jjtree.closeNodeScope(jjtn000, true);
      jjtc000 = false;
      jjtreeCloseNodeScope(jjtn000);
     jjtn000.setName(token.image.toString());
        break;
      case AT:
        token = jj_consume_token(AT);
      jjtree.closeNodeScope(jjtn000, true);
      jjtc000 = false;
      jjtreeCloseNodeScope(jjtn000);
     jjtn000.setName(token.image.toString());
        break;
      case CHARACTER_ATOM:
        token = jj_consume_token(CHARACTER_ATOM);
      jjtree.closeNodeScope(jjtn000, true);
      jjtc000 = false;
      jjtreeCloseNodeScope(jjtn000);
     jjtn000.setName(token.image.toString());
        break;
      default:
        jj_la1[2] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
        jjtreeCloseNodeScope(jjtn000);
      }
    }
  }

/* ************* ********** ************* */
/* *************  to delete ************* */
/* ************* ********** ************* */
  final public void FunctorVariableModule() throws ParseException {
 /*@bgen(jjtree) FunctorVariableModule */
     ASTFunctorVariableModule jjtn000 = new ASTFunctorVariableModule(this, JJTFUNCTORVARIABLEMODULE);
     boolean jjtc000 = true;
     jjtree.openNodeScope(jjtn000);
     jjtreeOpenNodeScope(jjtn000);Token token;
    try {
      if (jj_2_3(3)) {
        Variable();
        jj_consume_token(COLON);
      } else {
        ;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case IDENTIFIER:
        token = jj_consume_token(IDENTIFIER);
      jjtree.closeNodeScope(jjtn000, true);
      jjtc000 = false;
      jjtreeCloseNodeScope(jjtn000);
     jjtn000.setName(token.image.toString());
        break;
      case DYNAMIC:
        token = jj_consume_token(DYNAMIC);
      jjtree.closeNodeScope(jjtn000, true);
      jjtc000 = false;
      jjtreeCloseNodeScope(jjtn000);
     jjtn000.setName(token.image.toString());
        break;
      case MULTIFILE:
        token = jj_consume_token(MULTIFILE);
      jjtree.closeNodeScope(jjtn000, true);
      jjtc000 = false;
      jjtreeCloseNodeScope(jjtn000);
     jjtn000.setName(token.image.toString());
        break;
      case MODULE_TRANSPARENT:
        token = jj_consume_token(MODULE_TRANSPARENT);
      jjtree.closeNodeScope(jjtn000, true);
      jjtc000 = false;
      jjtreeCloseNodeScope(jjtn000);
     jjtn000.setName(token.image.toString());
        break;
      case VOLATILE:
        token = jj_consume_token(VOLATILE);
      jjtree.closeNodeScope(jjtn000, true);
      jjtc000 = false;
      jjtreeCloseNodeScope(jjtn000);
     jjtn000.setName(token.image.toString());
        break;
      case IS:
        token = jj_consume_token(IS);
      jjtree.closeNodeScope(jjtn000, true);
      jjtc000 = false;
      jjtreeCloseNodeScope(jjtn000);
     jjtn000.setName(token.image.toString());
        break;
      case MOD:
        token = jj_consume_token(MOD);
      jjtree.closeNodeScope(jjtn000, true);
      jjtc000 = false;
      jjtreeCloseNodeScope(jjtn000);
     jjtn000.setName(token.image.toString());
        break;
      case CHARACTER_ATOM:
        token = jj_consume_token(CHARACTER_ATOM);
      jjtree.closeNodeScope(jjtn000, true);
      jjtc000 = false;
      jjtreeCloseNodeScope(jjtn000);
     jjtn000.setName(token.image.toString());
        break;
      default:
        jj_la1[3] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } catch (Throwable jjte000) {
      if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
        jjtreeCloseNodeScope(jjtn000);
      }
    }
  }

  final public void Variable() throws ParseException {
 /*@bgen(jjtree) Variable */
    ASTVariable jjtn000 = new ASTVariable(this, JJTVARIABLE);
    boolean jjtc000 = true;
    jjtree.openNodeScope(jjtn000);
    jjtreeOpenNodeScope(jjtn000);Token token;
    try {
      token = jj_consume_token(VARIABLE);
      jjtree.closeNodeScope(jjtn000, true);
      jjtc000 = false;
      jjtreeCloseNodeScope(jjtn000);
       jjtn000.setName(token.image.toString());
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
        jjtreeCloseNodeScope(jjtn000);
      }
    }
  }
